# etcd-rs

./: Cargo.toml  README.md
.github/workflows/: CI.yml
examples/: kv.rs  watch.rs
src/: client.rs  lib.rs
src/auth/: mod.rs
src/kv/: mod.rs  put.rs
src/watch/: mod.rs
