[package]
name = "etcd-rs"
version = "1.0.1"
authors = ["lodrem <jialun.cai@pm.me>"]
edition = "2021"
keywords = ["etcd", "future", "async"]
repository = "https://github.com/lodrem/etcd-rs"
homepage = "https://github.com/lodrem/etcd-rs"
description = "etcd client for rust"
documentation = "https://docs.rs/etcd-rs"
license = "MIT"

[lints.rust]
dead_code = "allow"

[lints.clippy]
module_inception = "allow"

[[example]]
name = "kv"
path = "examples/kv.rs"

[[example]]
name = "tls"
path = "examples/tls.rs"
required-features = ["tls"]

[[example]]
name = "watch"
path = "examples/watch.rs"

[features]
default = ["tls"]
tls = ["tonic/tls", "tokio/fs"]

[dependencies]
tonic = "0.11"
prost = "0.12"
tokio = "1.38"
tokio-stream = "0.1"
futures = "0.3"
thiserror = "1.0"
http = "0.2"

[dev-dependencies]
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.11"
